[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Assets/tilset_02.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/Pottery.gd" type="Script" id=2]

[node name="Pottery" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 488.238 ]
}

[node name="Table" type="Sprite" parent="."]
position = Vector2( 496, 448 )
scale = Vector2( 0.571429, 0.571429 )
texture = ExtResource( 1 )

[node name="Left_line" type="Line2D" parent="."]
position = Vector2( -64, -16 )
points = PoolVector2Array( 528, 320, 528, 304, 528, 240, 528, 192 )
antialiased = true

[node name="Right_line" type="Line2D" parent="."]
position = Vector2( 0, 1 )
points = PoolVector2Array( 512, 303, 512, 287, 512, 223, 512, 175 )
antialiased = true

[node name="Clay_dough_sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.709804, 0.0156863, 0.0156863, 1 )
position = Vector2( 464, 304 )
scale = Vector2( 0.142857, 0.0357145 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_editor_description_": "Появляется глина, происходят анимации"
}

[node name="Clay_dough" type="Panel" parent="."]
margin_left = 464.0
margin_top = 304.0
margin_right = 512.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TEST" type="Line2D" parent="."]
points = PoolVector2Array( 384, 96, 512, 32 )
